--- a/vacancies/templates/vacancies/base.html
+++ b/vacancies/templates/vacancies/base.html
@@ -21,10 +21,10 @@
             <a class="nav-link" href="/vacancies">Вакансии</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Компании</a>
+            <a class="nav-link" href="/companies">Компании</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">О проекте</a>
+            <a class="nav-link" href="/about">О проекте</a>
           </li>
         </ul>
         <ul class="navbar-nav col-2 justify-content-end">
