--- a/vacancies/templates/vacancies/company.html
+++ b/vacancies/templates/vacancies/company.html
@@ -6,7 +6,7 @@
     </div>
     <section>
       <div class="text-center">
-        <img src="https://place-hold.it/130x80" width="130" height="80" alt="">
+        <img src="{{ company.logo.url }}" width="130" height="80" alt="">
       </div>
       <h1 class="h1 text-center mx-auto mt-0 pt-1" style="font-size: 70px;"><strong>{{ company.name }}</strong></h1>
       <p class="text-center pt-1">Компания, {{ company.vacancies.count }} вакансий</p>
@@ -23,7 +23,7 @@
                   <p class="text-muted pt-1">{{ vacancy.published_at }}</p>
                 </div>
                 <div class="col-12 col-md-4 col-lg-3 d-flex align-items-end">
-                  <img src="https://place-hold.it/130x80" width="130" height="80" alt="">
+                  <img src="{{ vacancy.company.logo.url }}" width="130" height="80" alt="">
                 </div>
               </div>
             </div>
