--- a/vacancies/templates/vacancies/index.html
+++ b/vacancies/templates/vacancies/index.html
@@ -31,7 +31,7 @@
         {% for spec in specs %}
         <div class="col-6 col-md-6 col-lg-3">
           <div class="card pt-4 text-center mb-4">
-            <img class="mx-auto d-block" src="https://place-hold.it/80x80" width="80" height="80" alt="">
+            <img class="mx-auto d-block" src="{{ spec.picture.url }}" width="80" height="80" alt="">
             <div class="card-body">
               <p class="card-text mb-2">{{ spec.title }}</p>
               <p class="card-text"><a href="/vacancies/cat/{{ spec.code }}">{{ spec.vacancies.count }} вакансий</a></p>
@@ -49,7 +49,7 @@
         <div class="col-6 col-md-6 col-lg-3">
           <div class="card pt-4 text-center mb-4">
             <a href="/companies/{{ company.id }}" style="max-width: 150px;" class="mx-auto d-block">
-              <img class="mx-auto d-block mw-100" src="https://place-hold.it/100x60" alt="">
+              <img class="mx-auto d-block mw-100" src="{{ company.logo.url }}" alt="">
             </a>
             <div class="card-body">
               <p class="card-text"><a href="/companies/{{ company.id }}">{{ company.vacancies.count }} вакансий</a></p>
