--- a/vacancies/templates/vacancies/register.html
+++ b/vacancies/templates/vacancies/register.html
@@ -11,7 +11,8 @@
   <main class="container">
     <div class="row">
       <div class="col-8 col-lg-4 offset-2 offset-lg-4">
-        <form class="form-signin pt-5">
+
+        <form class="form-signin pt-5" method="post" action="signup">{% csrf_token %}
           <div class="text-center mt-5 b-1">
 
             <h1 class="h3 mb-3 font-weight-normal">Джуманджи</h1>
