--- a/vacancies/templates/vacancies/base.html
+++ b/vacancies/templates/vacancies/base.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>{{title}}Джуманджи</title>
+  <title>{{title}} | Джуманджи</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
@@ -11,25 +11,39 @@
 <body style="background-color:  #ebf5fb;">
   <header class="container mt-3">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand mr-4 font-weight-bold" href="/">Джуманджи</a>
+      <a class="navbar-brand mr-4 font-weight-bold" href="{% url 'main' %}">Джуманджи</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
         <ul class="navbar-nav col-10">
           <li class="nav-item">
-            <a class="nav-link" href="/vacancies">Вакансии</a>
+            <a class="nav-link" href="{% url 'all_vacancies' %}">Вакансии</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/companies">Компании</a>
+            <a class="nav-link" href="{% url 'all_companies' %}">Компании</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about">О проекте</a>
+            <a class="nav-link" href="{% url 'about' %}">О проекте</a>
           </li>
         </ul>
         <ul class="navbar-nav col-2 justify-content-end">
           <li class="nav-item active">
-            <a href="/login" class="nav-link font-weight-bold">Вход</a>
+            {% if user.is_authenticated %}
+            <div class="btn-group">
+              <button type="button" class="btn dropdown-toggle font-weight-bold" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                {{ user.first_name }} {{ user.last_name }}
+              </button>
+              <div class="dropdown-menu dropdown-menu-right mt-3">
+                <a href="{% url 'main' %}" class="dropdown-item py-2">Профиль</a>
+                <a href="{% url 'main' %}" class="dropdown-item py-2">Резюме</a>
+                <a href="{% url 'mycompany' %}" class="dropdown-item py-2">Компания</a>
+                <a href="{% url 'logout' %}" class="dropdown-item py-2">Выйти</a>
+              </div>
+            </div>
+            {% else %}
+              <a href="/login" class="nav-link font-weight-bold">Вход</a>
+            {% endif %}
           </li>
         </ul>
       </div>
