--- a/vacancies/templates/vacancies/login.html
+++ b/vacancies/templates/vacancies/login.html
@@ -2,19 +2,21 @@
 {% block container %}
   <main class="container">
     <div class="row">
+
       <div class="col-8 col-lg-4 offset-2 offset-lg-4">
-        <form class="form-signin pt-5">{% csrf_token %}
+
+        <form method="post" class="form-signin pt-5" action="{% url 'login' %}">{% csrf_token %}
           <div class="text-center mt-5 b-1">
             <p class="h5 font-weight-light">Войдите, чтобы управлять</p>
           </div>
           <div class="mt-5 form-label-group">
             <p class="text-muted">Логин</p>
-            <input type="text" id="inputLogin" class="form-control" required autofocus>
+            <input type="text" name="username" id="inputLogin" class="form-control" required autofocus>
             <label for="inputLogin"></label>
           </div>
           <div class="form-label-group">
             <p class="text-muted"> Пароль</p>
-            <input type="password" id="inputPassword" class="form-control" required>
+            <input type="password" name="password" id="inputPassword" class="form-control" required>
             <label for="inputPassword"></label>
           </div>
           <div class="checkbox mb-3"></div>
