Правка ссылок (вставка тега url)

--- a/vacancies/templates/vacancies/base.html
+++ b/vacancies/templates/vacancies/base.html
@@ -42,7 +42,7 @@
               </div>
             </div>
             {% else %}
-              <a href="/login" class="nav-link font-weight-bold">Вход</a>
+              <a href="{% url 'login' %}" class="nav-link font-weight-bold">Вход</a>
             {% endif %}
           </li>
         </ul>
