--- a/vacancies/templates/vacancies/index.html
+++ b/vacancies/templates/vacancies/index.html
@@ -34,7 +34,7 @@
             <img class="mx-auto d-block" src="{{ spec.picture.url }}" width="80" height="80" alt="">
             <div class="card-body">
               <p class="card-text mb-2">{{ spec.title }}</p>
-              <p class="card-text"><a href="/vacancies/cat/{{ spec.code }}">{{ spec.vacancies.count }} вакансий</a></p>
+              <p class="card-text"><a href="{% url 'specialty' spec.code %}">{{ spec.vacancies.count }} вакансий</a></p>
             </div>
           </div>
         </div>
@@ -48,11 +48,11 @@
         {% for company in companies %}
         <div class="col-6 col-md-6 col-lg-3">
           <div class="card pt-4 text-center mb-4">
-            <a href="/companies/{{ company.id }}" style="max-width: 150px;" class="mx-auto d-block">
+            <a href="{% url 'company_card' company.id %}" style="max-width: 150px;" class="mx-auto d-block">
               <img class="mx-auto d-block mw-100" src="{{ company.logo.url }}" alt="">
             </a>
             <div class="card-body">
-              <p class="card-text"><a href="/companies/{{ company.id }}">{{ company.vacancies.count }} вакансий</a></p>
+              <p class="card-text"><a href="{% url 'company_card' company.id %}">{{ company.vacancies.count }} вакансий</a></p>
             </div>
           </div>
         </div>
