--- a/vacancies/templates/vacancies/vacancy.html
+++ b/vacancies/templates/vacancies/vacancy.html
@@ -4,12 +4,14 @@
     <div class="row mt-5">
       <div class="col-12 col-lg-2">
         <div class="pl-3 mb-5">
-          <p><a href=".">Назад</a></p>
+          <p><a href="{% url 'all_vacancies' %}">Назад</a></p>
         </div>
       </div>
       <div class="col-12 col-lg-8">
         <section class="pl-3">
-          <a href="/companies/{{ vacancy.company.id }}"><img src="{{ vacancy.company.logo.url }}" width="130" height="80" alt=""></a>
+          <a href="{% url 'company_card' vacancy.company.id %}">
+            <img src="{{ vacancy.company.logo.url }}" width="130" height="80" alt="">
+          </a>
           <div class="d-flex align-items-baseline align-content-baseline">
             <h1 class="h2 mt-4 font-weight-bold">{{ vacancy.title }}</h1>
             <p class="m-0 pl-3">{{ vacancy.salary_min }} - {{ vacancy.salary_max }} руб.</p>
