--- a/vacancies/templates/vacancies/login.html
+++ b/vacancies/templates/vacancies/login.html
@@ -5,7 +5,8 @@
 
       <div class="col-8 col-lg-4 offset-2 offset-lg-4">
 
-        <form method="post" class="form-signin pt-5" action="{% url 'login' %}">{% csrf_token %}
+        <form method="post" class="form-signin pt-5" action="{% url 'login' %}">
+          {% csrf_token %}
           <div class="text-center mt-5 b-1">
             <p class="h5 font-weight-light">Войдите, чтобы управлять</p>
           </div>
