--- a/vacancies/templates/vacancies/vacancy.html
+++ b/vacancies/templates/vacancies/vacancy.html
@@ -21,20 +21,23 @@
           <div style="line-height: 1.8;">
             <p>{{ vacancy.description }}</p>
           </div>
-          <form action="/echo" class="card mt-4 mb-3">
+
+          <form action="{% url 'vacancy' vacancy.id %}" class="card mt-4 mb-3" method="POST">
+            {% csrf_token %}
             <div class="card-body mx-3">
               <p class="h5 mt-3 font-weight-normal">Отозваться на вакансию</p>
               <div class="form-group">
-                <label class="mb-1 mt-2" for="userName">Вас зовут</label>
-                <input class="form-control" type="text" placeholder="" id="userName">
+                {{ form.written_username.errors }}
+                <label class="mb-1 mt-2" for="{{ form.written_username.id_for_label }}">Вас зовут</label>
+                <input class="form-control" type="text" placeholder="" id="{{ form.written_username.auto_id }}" name="{{ form.written_username.html_name }}">
               </div>
               <div class="form-group">
-                <label class="mb-1" for="userPhone">Ваш телефон</label>
-                <input class="form-control" type="tel" placeholder="" id="userPhone">
+                <label class="mb-1" for="{{ form.written_phone.id_for_label }}">Ваш телефон</label>
+                <input class="form-control" type="tel" placeholder="" id="{{ form.written_phone.auto_id }}" name="{{ form.written_phone.html_name }}">
               </div>
               <div class="form-group">
-                <label class="mb-1" for="userMsg" >Сопроводительное письмо</label>
-                <textarea class="form-control" rows="8" id="userMsg"></textarea>
+                <label class="mb-1" for="{{ form.written_caver_letter.id_for_label }}" >Сопроводительное письмо</label>
+                <textarea class="form-control" rows="8" id="{{ form.written_cover_letter.auto_id }}" name="{{ form.written_cover_letter.html_name }}"></textarea>
               </div>
               <input type="submit" class="btn btn-primary mt-4 mb-2" value="Записаться на пробный урок">
             </div>
