--- a/vacancies/templates/vacancies/companies.html
+++ b/vacancies/templates/vacancies/companies.html
@@ -8,7 +8,7 @@
         <div class="col-6 col-md-6 col-lg-3">
           <div class="card pt-4 text-center mb-4">
             <a href="{% url 'company_card' company.id %}" style="max-width: 150px;" class="mx-auto d-block">
-              <img class="mx-auto d-block mw-100" src="https://place-hold.it/100x60" alt="">
+              <img class="mx-auto d-block mw-100" src="{{ company.logo.url }}" alt="">
             </a>
             <div class="card-body">
               <p class="card-text"><a href="{% url 'company_card' company.id %}">{{ company.vacancies.count }} вакансий</a></p>
