--- a/vacancies/templates/vacancies/company-edit.html
+++ b/vacancies/templates/vacancies/company-edit.html
@@ -1,105 +1,33 @@
 {% extends 'vacancies/base.html' %}
+{% load crispy_forms_tags %}
 {% block container %}
 
 <main class="container mt-3 pb-5">
-    <div class="row mt-5">
-        <div class="col-12 col-lg-4">
-            <aside class="pt-3 pb-4 px-4 mb-5 card">
-                <h1 class="h4 pt-2 pb-2">Моя компания</h1>
-                <div class="nav flex-column nav-pills">
-                    <a class="nav-link active" href="{% url 'mycompany' %}">1. Информация о&nbsp;компании</a>
-                    <a class="nav-link" href="{% url 'mycompany_vacancy_list' %}">2. Вакансии</a>
-                </div>
-            </aside>
+  <div class="row mt-5">
+    <div class="col-12 col-lg-4">
+      <aside class="pt-3 pb-4 px-4 mb-5 card">
+        <h1 class="h4 pt-2 pb-2">Моя компания</h1>
+        <div class="nav flex-column nav-pills">
+          <a class="nav-link active" href="{% url 'mycompany' %}">1. Информация о компании</a>
+          <a class="nav-link" href="{% url 'mycompany_vacancy_list' %}">2. Вакансии</a>
         </div>
-        <div class="col-12 col-lg-8">
-            <div class="card">
-                <div class="card-body px-4 pb-4">
-                    <!-- Tab -->
-                    <section class="tab-pane fade show active">
-                        <h2 class="h4 pt-2 pb-3">Информация о&nbsp;компании</h2>
-                        <p class="alert alert-info" role="alert">
-                            Информация о компании обновлена
-                        </p>
-                        <form action="/echo" method="post">
-                            <!--{{ form.as_p }} -->
-                        </form>
-
-                        <form action="." method="post">
-                            {% csrf_token %}
-                            {{ form.errors }}
-                            <div class="row">
-                                <div class="col-12 col-md-6">
-                                    <div class="form-group pb-2">
-                                        <label class="mb-2 text-dark" for="{{ form.name.id_for_label }}">Название
-                                            компании</label>
-                                        <input class="form-control" id="{{ form.name.auto_id }}" name="{{ form.name.html_name }}"
-                                               required
-                                               type="text"
-                                               value="{{ form.name.value }}">
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-6">
-                                    <div class="form-group">
-                                        <label class="mb-2 text-dark" for="{{ form.logo.id_for_label }}">Логотип</label>
-                                        <div class="row align-items-center">
-                                            <div class="col-6">
-                                                <img alt="" src="{{ form.logo.value }}"
-                                                     style="max-width: 120px;height: auto;">
-                                            </div>
-                                            <div class="col-6" style="position: relative;">
-                                                <div class="input-group-prepend"
-                                                     style="position: absolute; top: 0;right: 15px;">
-                                                    <span class="btn btn-info px-4">Загрузить</span>
-                                                </div>
-                                                <div class="custom-file" style="">
-                                                    <input accept="image/*" class="custom-file-input"
-                                                           id="{{ form.logo.auto_id }}"
-                                                           name="{{ form.logo.html_name }}"
-                                                           type="file">
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12 col-md-6">
-                                    <div class="form-group pb-2">
-                                        <label class="mb-2 text-dark" for="{{ form.employee_count.id_for_label }}">Количество
-                                            человек в
-                                            компании</label>
-                                        <input class="form-control" id="{{ form.employee_count.auto_id }}" name="{{ form.employee_count.html_name }}"
-                                               required
-                                               type="text" value="{{ form.employee_count.value }}">
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-6">
-                                    <div class="form-group pb-2">
-                                        <label class="mb-2 text-dark"
-                                               for="{{ form.location.id_for_label }}">География</label>
-                                        <input class="form-control" id="{{ form.location.auto_id }}" name="{{ form.location.html_name }}"
-                                               required
-                                               type="text" value="{{ form.location.value }}">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group pb-2">
-                                <label class="mb-2 text-dark" for="{{ form.description.id_for_label }}">Информация о&nbsp;компании</label>
-                                <textarea class="form-control" id="{{ form.description.auto_id }}"
-                                          name="{{ form.description.html_name }}"
-                                          required rows="4" style="color:#000;">{{ form.description.value }}</textarea>
-                            </div>
-                            <div class="form-group">
-                                <input class="btn btn-info" type="submit" value="Сохранить">
-                            </div>
-                        </form>
-                    </section>
-                    <!-- END Tab -->
-                </div>
-            </div>
-        </div>
+      </aside>
     </div>
+    <div class="col-12 col-lg-8">
+      <div class="card">
+        <div class="card-body px-4 pb-4">
+          <!-- Tab -->
+          <section class="tab-pane fade show active">
+            <h2 class="h4 pt-2 pb-3">Информация о компании</h2>
+            <form action="." method="post">
+              {% crispy form %}
+            </form>
+          </section>
+          <!-- END Tab -->
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
 
 {% endblock %}
