--- a/vacancies/templates/vacancies/vacancy-edit.html
+++ b/vacancies/templates/vacancies/vacancy-edit.html
@@ -1,113 +1,42 @@
 {% extends 'vacancies/base.html' %}
+{% load crispy_forms_tags %}
 {% block container %}
 
 <main class="container mt-3 pb-5">
-    <div class="row mt-5">
-        <div class="col-12 col-lg-4">
-            <aside class="pt-3 pb-4 px-4 mb-5 card">
-                <h1 class="h4 pt-2 pb-2">Моя компания</h1>
-                <div aria-orientation="vertical" class="nav flex-column nav-pills" id="v-pills-tab" role="tablist">
-                    <a class="nav-link" href="{% url 'mycompany' %}">1. Информация о&nbsp;компании</a>
-                    <a class="nav-link active" href="{% url 'mycompany_vacancy_list' %}">2. Вакансии</a>
-                </div>
-            </aside>
+  <div class="row mt-5">
+    <div class="col-12 col-lg-4">
+      <aside class="pt-3 pb-4 px-4 mb-5 card">
+        <h1 class="h4 pt-2 pb-2">Моя компания</h1>
+        <div aria-orientation="vertical" class="nav flex-column nav-pills" id="v-pills-tab" role="tablist">
+          <a class="nav-link" href="{% url 'mycompany' %}">1. Информация о компании</a>
+          <a class="nav-link active" href="{% url 'mycompany_vacancy_list' %}">2. Вакансии</a>
         </div>
-        <div class="col-12 col-lg-8">
-            <div class="card">
-                <div class="card-body px-4 pb-4 tab-content">
-                    <!-- Tab -->
-                    <section>
-                        <h2 class="h4 pt-2 pb-3">{{ vacancy.title }}</h2>
-                        <p class="alert alert-info" role="alert">Вакансия обновлена</p>
-                        <form action="." method="post">
-                            {% csrf_token %}
-                            {{ form.errors }}
-                            <div class="row">
-                                <div class="col-12 col-md-6">
-                                    <div class="form-group pb-2">
-                                        <label class="mb-2 text-dark" for="{{ form.title.id_for_label }}">Название вакансии</label>
-                                        <input class="form-control" id="{{ form.title.auto_id }}" type="text"
-                                               value="{{ form.title.value }}" name="{{ form.title.html_name }}" required>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-6">
-                                    <div class="form-group pb-2">
-                                        <label class="mb-2 text-dark" for="userSpecialization">Специализация</label>
-                                        <select class="custom-select mr-sm-2" id="userSpecialization">
-                                            <option selected>Backend разработка</option>
-                                            <option value="1">Frontend разработка</option>
-                                            <option value="2">Project manager</option>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12 col-md-6">
-                                    <div class="form-group pb-2">
-                                        <label class="mb-2 text-dark" for="vacancySalaryMin">Зарплата от</label>
-                                        <input class="form-control" id="vacancySalaryMin" type="text" value="90 000">
-                                    </div>
-                                </div>
-                                <div class="col-12 col-md-6">
-                                    <div class="form-group pb-2">
-                                        <label class="mb-2" for="vacancySalaryMax">Зарплата до</label>
-                                        <input class="form-control" id="vacancySalaryMax" type="text" value="90 000">
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group pb-2">
-                                <label class="mb-2 text-dark" for="vacancySkills">Требуемые навыки</label>
-                                <textarea class="form-control" id="vacancySkills" rows="3" style="color:#000;">Бэкенд • Средний (Middle) • PHP • PostgreSQL • MySQL • Node.js • Laravel • Symfony • Yii framework • Sails.js • Rabbitmq • Kafka</textarea>
-                            </div>
-                            <div class="form-group pb-2">
-                                <label class="mb-2 text-dark" for="vacancyDescription">Описание вакансии</label>
-                                <textarea class="form-control" id="vacancyDescription" rows="13" style="color:#000;">Финтех компания входит в международную группу  и занимается развитием факторингового бизнеса. В связи с расширением штата, мы хотим усилить нашу команду Backend-разработчиком, для работы над улучшением продуктов компании.
-
-Мы предлагаем:
-Оформление по ТК РФ
-ДМС со стоматологией
-Достойную зарплату, уровень которой можно обсудить по телефону с рекрутером
-Гибкое начало дня, отдельные дни удаленной работы обсуждаются
-Современный офис
-Демократичную корпоративную культуру
-Работу в команде по Scrum
-                  </textarea>
-                            </div>
-                            <div class="form-group">
-                                <input class="btn btn-info" type="submit" value="Сохранить">
-                            </div>
-                        </form>
-                        <!-- END Vacancy info -->
-                        <!-- Applications -->
-                        <h2 class="h4 pt-2 pb-3">Отклики - 2</h2>
-                        <!-- Application 1 -->
-                        <div class="card mt-3">
-                            <div class="card-body px-4">
-                                <p class="mb-1 font-weight-bold">Семёнов Зельфик Геннадиевич</p>
-                                <p class="mb-2"><a class="text-dark" href="tel:+79002842324">+7 (900) 284-23-24</a></p>
-                                <p class="mb-1">Я&nbsp;хотел&nbsp;бы работать в&nbsp;компании &laquo;АБВГД&raquo;
-                                    программистом мобильных приложений. Мой опыт работы в&nbsp;программировании около 4&nbsp;лет
-                                    (последние 1,5 года занимаюсь разработкой приложений.</p>
-                            </div>
-                        </div>
-                        <!-- END Application 1 -->
-                        <!-- Application 1 -->
-                        <div class="card mt-3">
-                            <div class="card-body px-4">
-                                <p class="mb-1 font-weight-bold">Сорокина Акра Павловна</p>
-                                <p class="mb-2"><a class="text-dark" href="tel:+79002842324">+7 (900) 284-23-24</a></p>
-                                <p class="mb-1">Добрый день! Увидела объявление о&nbsp;вашей вакансии. Заранее благодарю
-                                    Вас за&nbsp;уделенное моей кандидатуре время. С&nbsp;уважением.</p>
-                            </div>
-                        </div>
-                        <!-- END Application 1 -->
-                        <!-- END Applications -->
-                    </section>
-                    <!-- END Tab -->
-                </div>
-            </div>
-        </div>
+      </aside>
     </div>
+    <div class="col-12 col-lg-8">
+      <div class="card">
+        <div class="card-body px-4 pb-4 tab-content">
+          <section>
+            <h2 class="h4 pt-2 pb-3">{{ vacancy.title }}</h2>
+            <form action="." method="post">
+              {% crispy form %}
+            </form>
+            <hr>
+            <h2 class="h4 pt-2 pb-3">Отклики - {{ applications.count }}</h2>
+            {% for application in applications %}
+            <div class="card mt-3">
+              <div class="card-body px-4">
+                <p class="mb-1 font-weight-bold">{{ application.written_username }}</p>
+                <p class="mb-2"><a class="text-dark" href="tel:{ application.written_phone }}">{{ application.written_phone }}</a></p>
+                <p class="mb-1">{{ application.written_cover_letter }}</p>
+              </div>
+            </div>
+            {% endfor %}
+          </section>
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
 
 {% endblock %}
