Поправлено отображение для пользователя без компании

--- a/vacancies/templates/vacancies/base.html
+++ b/vacancies/templates/vacancies/base.html
@@ -32,7 +32,7 @@
             {% if user.is_authenticated %}
             <div class="btn-group">
               <button type="button" class="btn dropdown-toggle font-weight-bold" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                {{ user.first_name }} {{ user.last_name }}
+                {{ user }}
               </button>
               <div class="dropdown-menu dropdown-menu-right mt-3">
                 <a href="{% url 'main' %}" class="dropdown-item py-2">Профиль</a>
