Добавлен поиск. Оптимизированы шаблоны

--- a/vacancies/templates/vacancies/companies.html
+++ b/vacancies/templates/vacancies/companies.html
@@ -5,16 +5,7 @@
       <h2 class="h2 font-weight-normal text-center mb-5">Нам доверяют лучшие компании</h2>
       <div class="row mb-0">
         {% for company in companies %}
-        <div class="col-6 col-md-6 col-lg-3">
-          <div class="card pt-4 text-center mb-4">
-            <a href="{% url 'company_card' company.id %}" style="max-width: 150px;" class="mx-auto d-block">
-              <img class="mx-auto d-block mw-100" src="{{ company.logo.url }}" alt="">
-            </a>
-            <div class="card-body">
-              <p class="card-text"><a href="{% url 'company_card' company.id %}">{{ company.vacancies.count }} вакансий</a></p>
-            </div>
-          </div>
-        </div>
+        {% include 'vacancies/snippet-company-smallcard.html' with company=company %}
         {% endfor %}
       </div>
     </section>
