--- a/vacancies/templates/vacancies/index.html
+++ b/vacancies/templates/vacancies/index.html
@@ -3,26 +3,7 @@
   <main class="container mt-3">
     <section>
       <h1 class="h1 text-center mx-auto mt-4 py-5"><strong>Вакансии для <br>Junior-разработчиков</strong></h1>
-      <div class="row">
-        <div class="col-12 col-md-8 col-lg-6 offset-lg-3 offset-md-2">
-          <form class="form-inline mb-3">
-            <div class="form-group col-8 col-md-10 pl-0">
-              <input class="form-control w-100" type="search" placeholder="Найти работу или стажировку" aria-label="Найти работу или стажировку">
-            </div>
-            <div class="form-group col-4 col-md-2 pl-0">
-              <button class="btn btn-primary w-100" type="submit">Найти</button>
-            </div>
-          </form>
-          <p>Например: 
-            <a href="#" class="text-dark border-bottom border-dark m-1 text-decoration-none">Python</a> 
-            <a href="#" class="text-dark border-bottom border-dark m-1 text-decoration-none">Flask</a> 
-            <a href="#" class="text-dark border-bottom border-dark m-1 text-decoration-none">Django</a> 
-            <a href="#" class="text-dark border-bottom border-dark m-1 text-decoration-none">Парсинг</a> 
-            <a href="#" class="text-dark border-bottom border-dark m-1 text-decoration-none">ML</a> 
-
-          </p>
-        </div>
-      </div>
+      {% include 'vacancies/snippet-search-form.html' %}
     </section>
 
     <section class="mt-5 pt-3">
@@ -34,7 +15,7 @@
             <img class="mx-auto d-block" src="{{ spec.picture.url }}" width="80" height="80" alt="">
             <div class="card-body">
               <p class="card-text mb-2">{{ spec.title }}</p>
-              <p class="card-text"><a href="{% url 'specialty' spec.code %}">{{ spec.vacancies.count }} вакансий</a></p>
+              <p class="card-text"><a href="{% url 'specialty' spec.code %}">Вакансий: {{ spec.vacancies.count }} </a></p>
             </div>
           </div>
         </div>
@@ -46,16 +27,7 @@
       <h2 class="h2 font-weight-normal text-center mb-5">Нам доверяют лучшие компании</h2>
       <div class="row mb-0">
         {% for company in companies %}
-        <div class="col-6 col-md-6 col-lg-3">
-          <div class="card pt-4 text-center mb-4">
-            <a href="{% url 'company_card' company.id %}" style="max-width: 150px;" class="mx-auto d-block">
-              <img class="mx-auto d-block mw-100" src="{{ company.logo.url }}" alt="">
-            </a>
-            <div class="card-body">
-              <p class="card-text"><a href="{% url 'company_card' company.id %}">{{ company.vacancies.count }} вакансий</a></p>
-            </div>
-          </div>
-        </div>
+        {% include 'vacancies/snippet-company-smallcard.html' with company=company %}
         {% endfor %}
       </div>
     </section>
