--- a/vacancies/templates/vacancies/search.html
+++ b/vacancies/templates/vacancies/search.html
@@ -1,44 +1,19 @@
 {% extends 'vacancies/base.html' %}
 {% block container %}
-  <main class="container mt-3">
-    <section>
-        <h1 class="h1 text-center mt-5 mb-4">Поиск вакансий</h1>
-        <div class="row">
-            <div class="col-md-7 col-lg-5 col-xl-4 col-sm-8 mx-auto">
-
-            <form class="form-inline sm-form mr-auto mb-4">
-                <input class="form-control mr-sm-2" type="text" placeholder="Например: ios" value="{{ spec.title }}" aria-label="Search">
-                <button class="btn btn-primary  my-0" type="submit">Найти вакансии</button>
-            </form>
-
-            </div>
-        </div>
-
-
-      <p class="text-center pt-1">Найдено {{ spec.vacancies.count }} вакансий</p>
-      <div class="row mt-5">
-        <div class="col-12 col-lg-8 offset-lg-2 m-auto">
-          {% for vacancy in spec.vacancies.all %}
-          <div class="card mb-4">
-            <div class="card-body px-4">
-              <div class="row">
-                <div class="col-12 col-md-8 col-lg-9">
-                  <h2 class="h2 pb-2">{{ vacancy.title }}</h2>
-                  <p class="mb-2">{{ vacancy.skills }}</p>
-                  <p>От {{ vacancy.salary_min }} до {{ vacancy.salary_max }} руб.</p>
-                  <p class="text-muted pt-1">{{ vacancy.published_at }}</p>
-                </div>
-                <div class="col-12 col-md-4 col-lg-3 d-flex align-items-end">
-                  <a href="{% url 'vacancy' vacancy.id %}">
-                      <img src="{{ vacancy.company.logo.url }}" width="130" height="80" alt="">
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
-          {% endfor %}
-        </div>
+<main class="container mt-3">
+  <section>
+    <h1 class="h1 text-center mt-5 mb-4">Поиск вакансий</h1>
+    {% include 'vacancies/snippet-search-form.html' with search_value=query %}
+  </section>
+  <section>
+    <p class="text-center pt-1">Найдено вакансий: {{ vacancies.count }} </p>
+    <div class="row mt-5">
+      <div class="col-12 col-lg-8 offset-lg-2 m-auto">
+        {% for vacancy in vacancies %}
+        {% include 'vacancies/snippet-vacancy-card.html' with vacancy=vacancy %}
+        {% endfor %}
       </div>
-    </section>
-  </main>
+    </div>
+  </section>
+</main>
 {% endblock %}
