--- a/vacancies/templates/vacancies/spec-vacancies.html
+++ b/vacancies/templates/vacancies/spec-vacancies.html
@@ -1,10 +1,9 @@
 {% extends 'vacancies/base.html' %}
 {% block container %}
 <main class="container mt-3">
-  {% for spec in specs %}
   <section>
-    <h1 class="h1 text-center mx-auto mt-1 pt-5" style="font-size: 70px;"><strong>{{ spec.title }}</strong></h1>
-    <p class="text-center pt-1"><a href="{% url 'specialty' spec.code %}">Вакансий: {{ spec.vacancies.count }}</a></p>
+    <h2 class="h2 text-center mt-5 mb-4">Вкансии специализации {{ spec.title }}</h2>
+    <p class="text-center pt-1">Найдено вакансий: {{ spec.vacancies.count }}</p>
     <div class="row mt-1">
       <div class="col-12 col-lg-8 offset-lg-2 m-auto">
         {% for vacancy in spec.vacancies.all %}
@@ -13,6 +12,5 @@
       </div>
     </div>
   </section>
-  {% endfor %}
 </main>
 {% endblock %}
