--- a/vacancies/templates/vacancies/base.html
+++ b/vacancies/templates/vacancies/base.html
@@ -36,7 +36,7 @@
               </button>
               <div class="dropdown-menu dropdown-menu-right mt-3">
                 <a href="{% url 'main' %}" class="dropdown-item py-2">Профиль</a>
-                <a href="{% url 'main' %}" class="dropdown-item py-2">Резюме</a>
+                <a href="{% url 'myresume' %}" class="dropdown-item py-2">Резюме</a>
                 <a href="{% url 'mycompany' %}" class="dropdown-item py-2">Компания</a>
                 <a href="{% url 'logout' %}" class="dropdown-item py-2">Выйти</a>
               </div>
