--- a/vacancies/templates/vacancies/resume-create.html
+++ b/vacancies/templates/vacancies/resume-create.html
@@ -6,7 +6,7 @@
     <div class="card-body px-3 pb-4">
       <h1 class="h4 pt-2">Мое резюме</h1>
       <p class="mt-2">У вас нет резюме. Хотите создать его?</p>
-      <a href="#" class="btn btn-info mb-2">Создать резюме</a>
+      <a href="{% url 'myresume_create' %}" class="btn btn-info mb-2">Создать резюме</a>
     </div>
   </section>
 </main>
