--- a/vacancies/templates/vacancies/sent.html
+++ b/vacancies/templates/vacancies/sent.html
@@ -6,7 +6,8 @@
       <div class="col-10 col-md-6 offset-1 offset-md-3 mt-5">
         <div class="card mb-3">
           <div class="card-body text-center pt-5">
-            <img src="/media/check.png" width="65" alt="">
+            {% load static %}
+            <img src="{% static '/vacancies/check.png' %}" alt="OK">
             <h2 class="h5 card-title mt-4 mb-2">Отклик отправлен</h2>
             <p><a href="{% url 'vacancy' vacancy_id %}">Вернуться к вакансии</a></p>
           </div>
